--- a/battleship/app/views/games/show.html.erb
+++ b/battleship/app/views/games/show.html.erb
@@ -11,7 +11,7 @@
       <tr>
         <td class="coordinate_header"><%= number_to_letter(row) %></td>
         <% 10.times do |column| %>
-          <% if @opponent_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}").hit == true %>
+          <% if @opponent_board.find_by(coordinates: "#{number_to_letter(row)}, #{ column.to_i + 1}").hit == true %>
             <td class="coordinate">X</td>
           <% else %>
             <td class="coordinate"></td>
