--- a/battleship/app/views/games/show.html.erb
+++ b/battleship/app/views/games/show.html.erb
@@ -46,16 +46,19 @@
   </table>
 </div>
 
-<% if @game.player_turn %>
+
 
   <% @rows = [['a'],['b'], ['c'], ['d'], ['e'], ['f'], ['g'], ['h'], ['i'], ['j']] %>
   <% @cols = [['1'],['2'], ['3'], ['4'], ['5'], ['6'], ['7'], ['8'], ['9'], ['10']] %>
 
-  <%= form_tag("/games/:id", method: 'patch') do %>
+  <%= form_tag("/games/#{@game.id}", method: 'patch') do %>
     <%= select_tag(:coord_row, options_for_select( @rows )) %>
     <%= select_tag(:coord_col, options_for_select( @cols )) %>
     <%= submit_tag "Fire" %>
   <% end %>
+
+  <!-- put fire form in if statement when users exit -->
+<% if @game.player_turn %>
 
 <% end %>
 
