--- a/battleship/app/views/games/show.html.erb
+++ b/battleship/app/views/games/show.html.erb
@@ -52,8 +52,8 @@
   <% @cols = [['1'],['2'], ['3'], ['4'], ['5'], ['6'], ['7'], ['8'], ['9'], ['10']] %>
 
   <%= form_tag("/games/#{@game.id}", method: 'patch') do %>
-    <%= select_tag(:coord_row, options_for_select( @rows )) %>
-    <%= select_tag(:coord_col, options_for_select( @cols )) %>
+    <%= select_tag(:row, options_for_select( @rows )) %>
+    <%= select_tag(:column, options_for_select( @cols )) %>
     <%= submit_tag "Fire" %>
   <% end %>
 
