--- a/battleship/app/views/games/show.html.erb
+++ b/battleship/app/views/games/show.html.erb
@@ -47,18 +47,19 @@
 </div>
 
 
+<!-- put fire form in if statement when users exit -->
+<% if @current_game.player_turn %>
 
   <% @rows = [['a'],['b'], ['c'], ['d'], ['e'], ['f'], ['g'], ['h'], ['i'], ['j']] %>
   <% @cols = [['1'],['2'], ['3'], ['4'], ['5'], ['6'], ['7'], ['8'], ['9'], ['10']] %>
 
-  <%= form_tag("/games/#{@game.id}", method: 'patch') do %>
+  <%= form_tag("/games/#{@current_game.id}", method: 'patch') do %>
     <%= select_tag(:row, options_for_select( @rows )) %>
     <%= select_tag(:column, options_for_select( @cols )) %>
     <%= submit_tag "Fire" %>
   <% end %>
 
-  <!-- put fire form in if statement when users exit -->
-<% if @game.player_turn %>
+
 
 <% end %>
 
