--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -54,3 +54,18 @@ nav h2 {
   background: asset-data-url("disaster-girl3.jpg") no-repeat fixed;
   text-align: center;
 }
+
+// #gamepage{
+//   background-color: #002047;
+// }
+//
+// table {
+//   table-layout: fixed;
+// }
+//
+// td{
+//   height: 30px;
+//   border: none;
+//   margin: 10px;
+//   background-color: #658DB5;
+// }
