--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -16,7 +16,7 @@
 <% end %><br><br><br><br><br><br>
 
 <%= form_for :game, url: '/games/join' do |f| %>
-  <%= f.text_field :gamenum, :class => 'entry', value: 'enter game #'%>
+  <%= f.text_field :gamenum, :class => 'entry', value: '#'%>
   <%= f.submit 'join game', :class => 'button' %>
 <% end %>
 <br>
