working on game over:

--- a/app/views/games/destroy.html.erb
+++ b/app/views/games/destroy.html.erb
@@ -1,2 +1,2 @@
-<h1>You destroyed <%= @destroyed_ship.type%> !</h1>
-<a href="/show">Back</a>
+<h1>You sunk their <%= @destroyed_ship.name%> !</h1>
+<a href="/games/<%= @current_game.id %>">Back</a>
