--- a/app/views/games/hit.html.erb
+++ b/app/views/games/hit.html.erb
@@ -1,5 +1,3 @@
-
-<h1>You hit <%= @hit_ship.type%>!</h1>
-<h2>Damage percentage: <%=  @hit_ship.tiles.count(1) / @hit_ship.tiles.length%> %</h2>
-<a href="/show">Back</a>
+<h1>You hit a ship!</h1>
+<a href="/games/<%= @current_game.id %>">Back</a>
 <div id='disastergirl'></div>
