--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,7 +13,7 @@
         <% 10.times do |column| %>
           <% current_tile = @opponent_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}") %>
           <% #binding.pry %>
-          <% if current_tile.hit == true %>
+          <% if !current_tile.ship && current_tile.hit == true %>
             <td class="coordinate">O</td>
           <% elsif current_tile.ship && current_tile.hit == true %>
             <td class="coordinate">X</td>
@@ -40,12 +40,12 @@
         <td class="coordinate_header"><%= number_to_letter(row) %></td>
         <% 10.times do |column| %>
           <% current_tile = @your_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}") %>
-          <% if current_tile.hit == true %>
+          <% if !current_tile.ship && current_tile.hit == true %>
             <td class="coordinate">O</td>
-          <% elsif current_tile.ship %>
-            <td class="coordinate">#</td>
           <% elsif current_tile.ship && current_tile.hit == true %>
             <td class="coordinate">X</td>
+          <% elsif current_tile.ship %>
+            <td class="coordinate">#</td>
           <% else %>
             <td class="coordinate"></td>
           <% end %>
