--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -1,4 +1,4 @@
-.coordinate_header {
+/*.coordinate_header {
   border: 1px solid black;
   display: inline-block;
   width: 20px;
@@ -10,4 +10,4 @@
   display: inline-block;
   width: 20px;
   height: 20px;
-}
+}*/
