--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,6 @@
-<h1>Opponent Board</h1>
+<div id='gamepage'>
+  <div id='tables'>
+  <h1>Opponent Board</h1>
 <div>
   <table style="width:100%">
     <tr>
@@ -12,7 +14,6 @@
         <td class="coordinate_header"><%= number_to_letter(row) %></td>
         <% 10.times do |column| %>
           <% current_tile = @opponent_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}") %>
-          <% #binding.pry %>
           <% if !current_tile.ship && current_tile.hit == true %>
             <td class="coordinate">O</td>
           <% elsif current_tile.ship && current_tile.hit == true %>
@@ -72,4 +73,5 @@
 
 
 <% end %>
-
+  </div>
+</div>
