--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -35,7 +35,7 @@ nav h2 {
   text-align: center;
   border: none;
   border-radius: 4px;
-  background-color: #A8A6A7;
+  background-color: white;
 }
 
 .button{
