--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -56,6 +56,8 @@
 </div>
 
 
+<!-- put fire form in if statement when users exit -->
+<% if @player_turn %>
 
   <% @rows = [['a'],['b'], ['c'], ['d'], ['e'], ['f'], ['g'], ['h'], ['i'], ['j']] %>
   <% @cols = [['1'],['2'], ['3'], ['4'], ['5'], ['6'], ['7'], ['8'], ['9'], ['10']] %>
@@ -67,8 +69,7 @@
   <% end %>
 
 
-<!-- put fire form in if statement when users exit -->
-<% if @current_game.player_turn %>
+
 
 <% end %>
 
