add styling to hit/destroy/win/hold pages

--- a/app/views/games/hit.html.erb
+++ b/app/views/games/hit.html.erb
@@ -1,3 +1,5 @@
-<h1>You hit a ship!</h1>
-<a href="/games/<%= @current_game.id %>">Back</a>
-<div id='disastergirl'></div>
+<div class="hit">
+  <h1>You hit a ship!</h1>
+    <a href="/games/<%= @current_game.id %>">Back</a>
+  <div id='disastergirl'></div>
+</div>
