--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -57,7 +57,7 @@
 </div>
 
 
-<!-- put fire form in if statement when users exit -->
+<!-- displays fire coordinate form if user's turn -->
 <% if @player_turn %>
 
   <% @rows = [['a'],['b'], ['c'], ['d'], ['e'], ['f'], ['g'], ['h'], ['i'], ['j']] %>
