--- a/app/views/games/hold.html.erb
+++ b/app/views/games/hold.html.erb
@@ -1,1 +1,3 @@
-<p>please wait for the other player to join. Your game number is: <%=@current_game.id %></p>
+<div class="hold">
+  <p>please wait for the other player to join. Your game number is: <%=@current_game.id %></p>
+</div>
