--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <nav class="nav-bar">
+      <a href="/">Home</a>
+      <% if @current_user %>
+        <%= @current_user.username.upcase %> |   <%= link_to 'Logout', logout_path %>
+      <% else %>
+        <%= link_to 'Login', login_path %> | <%= link_to 'Signup', signup_path %>
+      <% end %>
+    </nav>
   </head>
 
   <body>
