--- a/app/views/games/hold.html.erb
+++ b/app/views/games/hold.html.erb
@@ -1,3 +1,5 @@
 <div class="hold">
-  <p>Please wait for the other player to join. Your game number is: <%=@current_game.id %></p>
+
+  <h1>Please wait for the other player to join. Your game number is: <%=@current_game.id %></h1>
+
 </div>
