--- a/app/views/games/destroy.html.erb
+++ b/app/views/games/destroy.html.erb
@@ -1,2 +1,4 @@
-<h1>You sunk their <%= @destroyed_ship.name%> !</h1>
-<a href="/games/<%= @current_game.id %>">Back</a>
+<div class="hold">
+  <h1 class="hold-text">You sunk their <%= @destroyed_ship.name%> !</h1>
+  <a class="sunk-text" href="/games/<%= @current_game.id %>">Back</a>
+</div>
