--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,12 +1,13 @@
 <div class='opener'>
     <div id='firstpage'>
-      <%= form_for :game, url: '/games' do |f| %>
-        <%= f.submit 'create game', :class => 'button' %>
-      <% end %><br><br><br><br><br><br>
-
+      <div id="new-game">
+        <%= form_for :game, url: '/games' do |f| %>
+          <%= f.submit 'create game', :class => 'button' %>
+        <% end %><br><br><br><br><br><br>
+      </div>
       <%= form_for :game, url: '/games/join' do |f| %>
         <%= f.text_field :gamenum, :class => 'entry' %>
-        <%= f.submit 'join game', :class => 'button' %>
+        <%= f.submit 'join game', :class => 'button join-game' %>
       <% end %>
     <br>
   </div>
