--- a/app/views/games/hit.html.erb
+++ b/app/views/games/hit.html.erb
@@ -1,5 +1,9 @@
-<div class="hit">
-  <h1>You hit a ship!</h1>
-    <a href="/games/<%= @current_game.id %>">Back</a>
+<div class="hold">
+
+  <h1 class="hit-text">You hit a ship!</h1>
+
+  <a href="/games/<%= @current_game.id %>">Back</a>
+
   <div id='disastergirl'></div>
+
 </div>
