--- a/app/views/games/hold.html.erb
+++ b/app/views/games/hold.html.erb
@@ -1,5 +1,5 @@
 <div class="hold">
 
-  <h1>Please wait for the other player to join. Your game number is: <%=@current_game.id %></h1>
+  <h1 class="hold-text">Please wait for the other player to join. Your game number is: <%=@current_game.id %></h1>
 
 </div>
