--- a/app/views/games/over.html.erb
+++ b/app/views/games/over.html.erb
@@ -1,5 +1,5 @@
 <% if @current_game.winner_id == @current_user.id %>
-  <h1>Well played, <%= @current_user.username.capitalize %>. You win!</h1>
+  <h1 class="over-text">Well played, <%= @current_user.username.capitalize %>. You win!</h1>
 <% else %>
-  <h1>You lost the battle, <%= @current_user.username.capitalize %>, but did you lose the war?</h1>
+  <h1 class="over-text">You lost the battle, <%= @current_user.username.capitalize %>, but did you lose the war?</h1>
 <% end %>
