users can successfully place ships and handle errors in placement

--- a/app/views/ships/new.html.erb
+++ b/app/views/ships/new.html.erb
@@ -19,8 +19,8 @@
   <%= select_tag(:sub_orientation, options_for_select( orientation )) %>
   <br>
   <p class="ship_name">Destroyer</p>
-  <%= select_tag(:destoryer_row, options_for_select( rows )) %>
-  <%= select_tag(:destoryer_column, options_for_select( cols )) %>
+  <%= select_tag(:destroyer_row, options_for_select( rows )) %>
+  <%= select_tag(:destroyer_column, options_for_select( cols )) %>
   <%= select_tag(:destroyer_orientation, options_for_select( orientation )) %>
   <br>
   <p class="ship_name">Cruiser</p>
