--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -12,7 +12,12 @@
   height: 20px;
 }*/
 
-
+.coordinate_header {
+  background-color: white;
+  border-radius: 5px;
+  opacity: .90;
+  border: 1px solid black;
+}
 .your-turn {
   border: 2px solid green;
 }
@@ -37,6 +42,7 @@
   border-bottom: 1px solid black;
   margin-bottom: 5px;
 }
+
 
 .hold,
 .hit {
