--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <% 10.times do |row| %>
       <tr>
-        <td class="coordinate_header <%= @opponent_color %>"><%= number_to_letter(row) %></td>
+        <td class="coordinate_header"><%= number_to_letter(row) %></td>
         <% 10.times do |column| %>
           <% current_tile = @opponent_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}") %>
           <% if !current_tile.ship && current_tile.hit == true %>
@@ -24,7 +24,8 @@
           <% elsif current_tile.ship && current_tile.hit == true %>
             <td class="coordinate <%= @opponent_color %>">&#10004;</td>
           <% else %>
-            <td class="coordinate <%= @opponent_color %>"></td>
+            <% binding.pry %>
+            <td class="coordinate <%= @opponent_color %>"><a href="/games">fire!</a></td>
           <% end %>
         <% end %>
       </tr>
@@ -52,8 +53,8 @@
       <% end %>
     </tr>
     <% 10.times do |row| %>
-      <tr class="<%= @your_color %>">
-        <td class="coordinate_header <%= @your_color %>"><%= number_to_letter(row) %></td>
+      <tr >
+        <td class="coordinate_header "><%= number_to_letter(row) %></td>
         <% 10.times do |column| %>
           <% current_tile = @your_board.find_by(coordinates: "#{number_to_letter(row)}, #{column + 1}") %>
           <% if !current_tile.ship && current_tile.hit == true %>
