--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -8,7 +8,10 @@
   font-size: 20px;
   line-height: 30px;
   text-align: center;
+
 }
+
+
 
 a {
   color: black;
@@ -70,8 +73,13 @@ a {
   // max-height: 800px;
   font-family: sans-serif;
   font-weight: bolder;
-  padding: 50px;
+  padding: 100px;
+
 }
+
+
+
+
 
 table {
   max-height: 15vh;
@@ -91,5 +99,36 @@ td{
   border-radius: 5px;
 }
 
+.ship-animation {
+  max-width: 100px;
+  float: left;
+  animation-name: wave;
+  animation-duration: 15s;
+  animation-iteration-count: infinite;
+}
 
+@keyframes wave {
+    0% {
+        transform: translate3d(0px, 40px, 0px);
+        animation-timing-function: ease-in;
+    }
+     25% {
+        transform: translate3d(250px, 0px, 0px);
+        animation-timing-function: linear;
+    }
+
+    50% {
+        transform: translate3d(500px, 40px, 0px);
+        animation-timing-function: linear;
+    }
+    75% {
+        transform: translate3d(250px, 0px, 0px);
+        animation-timing-function: linear;
+    }
+
+    100% {
+        transform: translate3d(0px, 40px, 0px);
+        animation-timing-function: ease-out;
+    }
+}
 
