--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -1,17 +1,3 @@
-/*.coordinate_header {
-  border: 1px solid black;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}
-
-.coordinate {
-  border: 1px dotted black;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}*/
-
 .coordinate_header {
   background-color: white;
   border-radius: 5px;
@@ -56,7 +42,8 @@
 .hold-text,
 .over-text,
 .hit-text,
-.player {
+.player,
+.waiting {
   border: 1px solid black;
   background-color: white;
   opacity: .95;
@@ -78,7 +65,6 @@ body {
   margin-bottom: 100%;
 }
 
-
 .preview_board {
   float: right;
 }
@@ -95,5 +81,5 @@ body {
   border: 1px solid black;
   width: 5px;
   height: 5px;
-}
+
 
