--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,7 +24,7 @@
           <% elsif current_tile.ship && current_tile.hit == true %>
             <td class="coordinate <%= @opponent_color %>">&#10004;</td>
           <% else %>
-            <td class="coordinate <%= @opponent_color %>"></td>
+            <td class="coordinate <%= @opponent_color %>"><a href="<%=column%>, <%=row%>">fire!</a></td>
           <% end %>
         <% end %>
       </tr>
@@ -73,6 +73,7 @@
 
 
 
+
   <% @rows = [['a'],['b'], ['c'], ['d'], ['e'], ['f'], ['g'], ['h'], ['i'], ['j']] %>
   <% @cols = [['1'],['2'], ['3'], ['4'], ['5'], ['6'], ['7'], ['8'], ['9'], ['10']] %>
 
@@ -81,9 +82,13 @@
     <%= select_tag(:column, options_for_select( @cols )) %>
     <%= submit_tag "Fire" %>
   <% end %>
+
+<div class="wait">
+  <h1 class="waiting">Waiting...</h1>
+  <div ><%= image_tag("boat", :class => "ship-animation")  %></div>
+</div>
 <!-- displays fire coordinate form if user's turn -->
 <% if @player_turn %>
-
 <% end %>
   </div>
 </div>
