--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -8,6 +8,13 @@
   border: 2px solid green;
 }
 
+.nav {
+  border-right: 1px solid black;
+  margin-right: 5px;
+  padding-right: 5px;
+  margin-top: -5px;
+}
+
 .their-turn {
   border: 2px solid red;
 }
@@ -22,12 +29,7 @@
   margin: 20px;
   padding: 50px;
 }
-.nav-bar {
-  background-color: #ccffff;
-  padding: 20px;
-  border-bottom: 1px solid black;
-  margin-bottom: 5px;
-}
+
 
 
 .hold,
@@ -43,7 +45,9 @@
 .over-text,
 .hit-text,
 .player,
-.waiting {
+.waiting,
+.user-name,
+th {
   border: 1px solid black;
   background-color: white;
   opacity: .95;
@@ -83,3 +87,6 @@ body {
   height: 5px;
 
 
+head {
+  background-color: blue;
+}
