--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,35 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <h1 class="logo">Battleship</h1>
     <nav class="nav-bar">
-      <a href="/">Home</a>
+      <a class="nav" href="/">Home</a>
+      <a class="nav" href="/users">High Scores</a>
+
       <% if @current_user %>
-        |   <%= link_to 'Logout', logout_path %> | <%= @current_user.username.upcase %>
+           <%= link_to 'Logout', logout_path, :class => "nav" %>  <a href="/users/ <%= @current_user.id %>"><%= @current_user.username.upcase  %> </a>
       <% else %>
-        <%= link_to 'Login', login_path %> | <%= link_to 'Signup', signup_path %>
+        <%= link_to 'Login', login_path, :class => "nav" %>  <%= link_to 'Signup', signup_path %>
       <% end %>
     </nav>
+    <div class="wait home-boat happy-waves-background">
+      <div ><%= image_tag("boat", :class => "ship-animation")  %></div>
+    </div >
+      <div class="happy-waves-background"><%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+        <%= image_tag("happy-waves", :class => "happy-waves")  %>
+      </div>
+
   </head>
 
   <body>
